--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bluebird": "^3.5.1",
     "core-js": "^2.4.1",
+    "mongodb": "^3.0.0-rc0",
+    "mongoose": "^4.13.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
