--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^5.0.0",
     "bluebird": "^3.5.1",
     "core-js": "^2.4.1",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
     "rxjs": "^5.5.2",
