--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "core-js": "^2.4.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "jsonwebtoken": "^8.1.0",
     "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.7",
     "rxjs": "^5.5.2",
